// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavbarToggle /> should render expanded correctly 1`] = `
<styles__Toggle
  aria-expanded={true}
  id="main-navbar-toggle"
  onClick={[MockFunction]}
  type="button"
>
  <span
    className="sr-only"
  >
    Toggle navigation
  </span>
  <styles__Bar />
  <styles__Bar />
  <styles__Bar />
</styles__Toggle>
`;

exports[`<NavbarToggle /> should render non-expanded correctly 1`] = `
<styles__Toggle
  aria-expanded={false}
  id="main-navbar-toggle"
  onClick={[MockFunction]}
  type="button"
>
  <span
    className="sr-only"
  >
    Toggle navigation
  </span>
  <styles__Bar />
  <styles__Bar />
  <styles__Bar />
</styles__Toggle>
`;
